*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.1 ===
* Added some wrappers for standard C library.
* Added atomic functions.
* Added endianess functions.
* Added bit manipulation functions.

=== 1.0.0 ===

This is initial release of LSP common library for further enhancements and updates.