@@ -4,9 +4,10 @@
 
 === 1.0.1 ===
 * Added some wrappers for standard C library.
-* Added atomic functions.
-* Added endianess functions.
+* Added basic atomic manipulation functions.
+* Added endianess manipulation functions.
 * Added bit manipulation functions.
+* Added pointer alignment and aligned pointer allocation routines.
 
 === 1.0.0 ===
 
